# cs474

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
artifacts/llm_judge_runs_beam4/: dev_scratch_medium.jsonl  dev_scratch_small.jsonl  dev_scratch_tiny.jsonl
artifacts/llm_judge_runs_greedy/: dev_scratch_medium.jsonl  dev_scratch_small.jsonl  dev_scratch_tiny.jsonl
notebooks/: 01_briefme_eda.ipynb  02_llm_judge.ipynb  03_automated_metrics.ipynb  04_train_scratch_seq2seq.ipynb  05_train_t5_baseline.ipynb  06_inference_scratch_runs.ipynb  07_automated_metrics.ipynb  08_llm_judge.ipynb
planning/: dataset_proposal.md  final_project.md  lab8_self_attention.ipynb  north_star_plan.md  project_proposal.md
scripts/: train_scratch_seq2seq.py  train_t5_baseline.py
src/briefme/: __init__.py  data.py  generation.py  inference_persist.py  judge_ollama.py  metrics.py  schema.py  scratch_inference.py  seq2seq_data.py  train_scratch_loop.py  train_t5_loop.py
src/briefme/transformer/: __init__.py
src/transformer/: __init__.py  attention.py  config.py  layers.py  masking.py  model.py  positional.py
tests/: test_attention_layers.py  test_generation.py  test_inference_persist.py  test_metrics.py  test_scratch_inference.py  test_seq2seq_data.py  test_seq2seq_model.py  test_train_loops_import.py  test_transformer_config.py
